--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>UnSplash</title>
+    <title>UnSplash Challenge: by Samuel Lawal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
